<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_weight="1"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="fill_parent" >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="wrap_content"
    android:background="@drawable/backfinal">


   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical">
    <TextView
        android:id="@+id/text_view2"
        android:layout_width="wrap_content"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:layout_height="wrap_content"
        android:text="@string/e8_2"
        android:layout_marginStart="40sp"
android:layout_marginBottom="10dp"

        android:layout_gravity="center_horizontal" />
    <TextView
        android:id="@+id/text_view3"
        android:layout_width="fill_parent"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:text="@string/e8_3"
android:layout_marginStart="10sp"
        />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_view4"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:text="@string/e8_4"
       android:textSize="25sp"
        android:layout_gravity="center_horizontal"
         />


    <TextView
        android:id="@+id/text_view5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e8_5"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:layout_marginBottom="15dp"
android:layout_marginStart="30sp"

       android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/text_view6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="30sp"
        android:text="@string/e8_6"
        android:textSize="20sp"
        android:textColor="#ffffff"
/>
    <TextView
        android:id="@+id/text_view7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="30sp"
        android:text="@string/e8_7"
        android:textSize="20sp"
        android:textColor="#ffffff"
/>

    <TextView
        android:id="@+id/text_view8"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:text="@string/e8_8"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"
       />


    <TextView
        android:id="@+id/text_view9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e8_9"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="30sp"

        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/text_view10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="30sp"
        android:text="@string/e8_10"
        android:textSize="20sp"
        android:textColor="#ffffff"

        />
       <TextView
        android:id="@+id/text_view11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="30sp"
        android:text="@string/e8_11"
        android:textSize="20sp"
        android:textColor="#ffffff"

        />
    <TextView
        android:id="@+id/text_view12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15sp"
        android:text="@string/e8_12"
        android:textSize="30sp"
        android:textColor="#ffffff"

         />
</LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <Button android:id="@+id/button"
                android:paddingBottom="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:clickable="true"
                 />
            </LinearLayout>
    </LinearLayout>


</RelativeLayout>


</ScrollView>