<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_weight="1"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="fill_parent" >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:background="@drawable/backfinal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">


        <TextView
            android:id="@+id/text_view1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ab_1"
            android:textColor="#ffffff"
            android:textSize="35sp"
            android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/text_view2"
        android:layout_marginTop="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ab_2"
        android:textColor="#ffffff"

        android:textSize="30sp"
        android:gravity="center_horizontal"/>
    <TextView
        android:id="@+id/text_view3"
        android:layout_marginStart="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/ab_3"
        android:layout_marginEnd="5dp"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:gravity="start"/>
        <TextView
            android:layout_marginTop="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ab_4"
            android:id="@+id/text_view4"
            android:textColor="#ffffff"

            android:textSize="30sp"
            android:gravity="center_horizontal"/>
        <TextView
            android:id="@+id/text_view5"
            android:layout_marginStart="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/ab_5"
            android:textColor="#ffffff"
            android:layout_marginEnd="5dp"
            android:textSize="25sp"
            android:gravity="start"/>
        <Button android:id="@+id/button"
            android:paddingBottom="24dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/visitus"
            android:clickable="true"
            android:layout_gravity="center_horizontal"
            />
</LinearLayout>
</RelativeLayout>
</ScrollView>