<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_weight="1"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="fill_parent" >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="wrap_content"
    android:background="@drawable/backfinal">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_view2"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:text="@string/e9_2"
android:layout_marginBottom="10dp"

        />
    <TextView
        android:id="@+id/text_view3"
        android:layout_width="fill_parent"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:text="@string/e9_3"

      />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_view4"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:text="@string/e9_4"
       android:textSize="25sp"
        android:layout_gravity="center_horizontal"
        />


    <TextView
        android:id="@+id/text_view5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e9_5"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:layout_marginStart="10sp"
        android:layout_marginBottom="15dp"
       android:layout_marginTop="10dp" />
</LinearLayout>
    <TextView
        android:id="@+id/text_view6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15sp"
        android:text="@string/e9_6"
        android:textSize="30sp"
        android:textColor="#ffffff"

       />



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <Button android:id="@+id/button"
                android:paddingBottom="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:clickable="true"
                />
            </LinearLayout>
    </LinearLayout>


</RelativeLayout>


</ScrollView>